@@ -52,6 +52,7 @@ extract_bzip2 = \
 extract_zip = \
   extract_rar = \
   extract_cab = \
+  extract_chm = \
   extract_arj = \
   extract_cpio = \
   extract_rpm = \
@@ -78,6 +79,7 @@ list_bzip2 = \
   list_compress = \
   list_rar = \
   list_cab = \
+  list_chm = \
   list_arj = \
   list_cpio = \
   list_rpm = \
@@ -107,6 +109,7 @@ test_bzip2 = \
   test_compress = \
   test_rar = \
   test_cab = \
+  test_chm = \
   test_arj = \
   test_cpio = \
   test_rpm = \
